--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "typecheck": "tsc -b",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
@@ -30,7 +31,6 @@
     "react-intersection-observer": "^9.16.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.3.0",
-    "react-wordcloud": "^1.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
@@ -46,5 +46,12 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
+  },
+  "resolutions": {
+    "d3-color": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-transition": "^3.0.1"
   }
 }
